--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ data-mdb-ride="carousel"
   <div class="carousel-item active">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="carousel-item col-lg-4">
           <div class="card">
             <img
               src="https://mdbcdn.b-cdn.net/img/new/standard/nature/181.webp"
