--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ data-mdb-ride="carousel"
 <!-- Inner -->
 <div class="carousel-inner py-4" style="border: 2px solid green">
   <!-- Single item -->
-  <div class="carousel-item active">
+  <div class="carousel-item active" style="border: 3px solid yellow;">
     <div class="container">
       <div class="row">
         <div class="carousel-item col-lg-4">
