--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ data-mdb-ride="carousel"
 <!-- Inner -->
 <div class="carousel-inner py-4" style="border: 2px solid green">
   <!-- Single item -->
-  <div class="carousel-item active" style="border: 3px solid yellow;">
+  <div class="carousel-item active" style="border: 3px solid yellow;width: 800px;">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -65,7 +65,7 @@ data-mdb-ride="carousel"
           </div>
         </div>
 
-        <div class="col-lg-4 d-none d-lg-block">
+      /*  <div class="col-lg-4 d-none d-lg-block">*/
           <div class="card">
             <img
               src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
