--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ data-mdb-ride="carousel"
           </div>
         </div>
 
-      <!--<div class="col-lg-4 d-none d-lg-block">
+      <<div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
               src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
@@ -81,7 +81,7 @@ data-mdb-ride="carousel"
               <a href="#!" class="btn btn-primary">ver proyecto</a>
             </div>
           </div>
-        </div>-->
+        </div>
 
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
