--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ class="carousel slide carousel-dark text-center"
 data-mdb-ride="carousel"
 >
 <!-- Controls -->
-<div class="d-flex justify-content-center mb-4" style="border: 1px solid red;">
+<div class="d-flex justify-content-center mb-4" ">
  <button
    class="carousel-control-prev position-relative"
    type="button"
@@ -46,8 +46,6 @@ data-mdb-ride="carousel"
 <div class="carousel-inner py-4" style="border: 2px solid green">
  <!-- Single item -->
  <div class="carousel-item active">
-   <div class="container">
-     <div class="row">
        <div class="col-lg-4">
          <div class="card">
            <img
@@ -62,9 +60,10 @@ data-mdb-ride="carousel"
                              </p>
              <a href="#!" class="btn btn-primary">Ver proyecto</a>
            </div>
-         </div>
-       </div>
-
+         </div> 
+      </div>      
+</div>
+<div class="carousel-item active"></div>
        <div class="col-lg-4 d-none d-lg-block">
          <div class="card">
            <img
@@ -82,7 +81,7 @@ data-mdb-ride="carousel"
            </div>
          </div>
        </div>
-
+</div>
        <div class="col-lg-4 d-none d-lg-block">
          <div class="card">
            <img
@@ -102,7 +101,7 @@ data-mdb-ride="carousel"
        </div>
      </div>
    </div>
- </div>
+
 
  <!-- Single item -->
  <div class="carousel-item">
