both carrusels to compare and syle

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ data-mdb-ride="carousel"
 <!-- Inner -->
 <div class="carousel-inner py-4" style="border: 2px solid green">
  <!-- Single item -->
- <div class="carousel-item active">
-       <div class="col-lg-4">
-         <div class="card">
+    <div class="carousel-item active" style="background-color:red;width: 100%; ">
+         <div class="col-lg-4">
+             <div class="card">
            <img
              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/181.webp"
              class="card-img-top"
@@ -60,50 +60,36 @@ data-mdb-ride="carousel"
                              </p>
              <a href="#!" class="btn btn-primary">Ver proyecto</a>
            </div>
-         </div> 
-      </div>      
-</div>
-<div class="carousel-item active"></div>
-       <div class="col-lg-4 d-none d-lg-block">
-         <div class="card">
-           <img
-             src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
-             class="card-img-top"
-             alt="Sunset Over the Sea"
-           />
-           <div class="card-body">
-             <h5 class="card-title">Proyecto</h5>
-             <p class="card-text">
-               Una breve descripción del proyecto que idealmente no tenga mucho más de unas 
-               veinte palabras aproximadamente.
-             </p>
-             <a href="#!" class="btn btn-primary">ver proyecto</a>
-           </div>
+             </div> 
+         </div>      
+    </div>
+ 
+    <div class="carousel-item " style="width: 25%;">
+         <div class="col-lg-4 d-none d-lg-block">
+          <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
+                class="card-img-top"
+                 alt="Sunset Over the Sea"
+                 />
+               <div class="card-body">
+                   <h5 class="card-title">Proyecto</h5>
+                   <p class="card-text">
+                    Una breve descripción del proyecto que idealmente no tenga mucho más de unas 
+                   veinte palabras aproximadamente.
+                   </p>
+                   <a href="#!" class="btn btn-primary">ver proyecto</a>
+          </div>
+          </div>
          </div>
-       </div>
+    </div>
+      
 </div>
-       <div class="col-lg-4 d-none d-lg-block">
-         <div class="card">
-           <img
-             src="https://mdbcdn.b-cdn.net/img/new/standard/nature/183.webp"
-             class="card-img-top"
-             alt="Sunset over the Sea"
-           />
-           <div class="card-body">
-             <h5 class="card-title">Proyecto</h5>
-             <p class="card-text">
-               Una breve descripción del proyecto que idealmente no tenga mucho más de unas 
-               veinte palabras aproximadamente.
-             </p>
-             <a href="#!" class="btn btn-primary">ver proyecto</a>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
+<!--Inner-->
+   
 
 
- <!-- Single item -->
+ <!-- Single item 
  <div class="carousel-item">
    <div class="container">
      <div class="row">
@@ -164,7 +150,7 @@ data-mdb-ride="carousel"
    </div>
  </div>
 
- <!-- Single item -->
+ Single item 
  <div class="carousel-item">
    <div class="container">
      <div class="row">
@@ -225,8 +211,8 @@ data-mdb-ride="carousel"
    </div>
  </div>
 </div>
-<!-- Inner -->
-    </div>
+  -->
+    
 
 <!-- MDB -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js">
